fix search dropdown from being cutoff

--- a/app/assets/stylesheets/global.css.scss
+++ b/app/assets/stylesheets/global.css.scss
@@ -17,6 +17,9 @@
 .cf:after {
     clear: both;
 }
+.row {
+  overflow: visible !important;
+}
 .connect-icon {
   margin-top: 15px;
 }
